EBR-136;EP-347;EP-350

--- a/templates/autosignup/settings.html
+++ b/templates/autosignup/settings.html
@@ -11,7 +11,7 @@
             </h1>
             <ol class="breadcrumb">
                 <li><a href="#">{% trans "Signups" %}</a></li>
-                <li class="active">{% trans "signup settings" %}</li>
+                <li class="active">{% trans "Signup Settings" %}</li>
             </ol>
         </div>
     </section>
