--- a/templates/autosignup/signups.html
+++ b/templates/autosignup/signups.html
@@ -10,7 +10,7 @@
                 {% trans "Signups" %}<br>
             </h1>
             <ol class="breadcrumb">
-                <li><a href="#">{% trans "signups" %}</a></li>
+                <li><a href="#">{% trans "Signups" %}</a></li>
             </ol>
         </div>
         {% comment %}
