--- a/templates/dashboard/dashboard.html
+++ b/templates/dashboard/dashboard.html
@@ -20,7 +20,7 @@
                 {% trans "Dashboard" %}<br>
             </h1>
             <ol class="breadcrumb">
-                <li><a href="#">{% trans "dashboard" %}</a></li>
+                <li><a href="#">{% trans "Dashboard" %}</a></li>
             </ol>
         </div>
     </section>
