--- a/templates/groupsystem/members.html
+++ b/templates/groupsystem/members.html
@@ -14,11 +14,12 @@
     <section class="content-header-new container-fluid">
         <div class="col-md-4">
             <h1>
-                {{ group.name }} - {% trans "admin" %} - {% trans "members" %}<br>
+                {% trans "Members" %}<br>
             </h1>
             <ol class="breadcrumb">
                 <li><a href="#">{% trans "Group" %}</a></li>
-                <li class="active">{% trans "admin" %}</li>
+                <li>{% trans "Admin" %}</li>
+                <li class="active">{% trans "Members" %}</li>
             </ol>
         </div>
         {% comment %}
