--- a/templates/groupsystem/posts.html
+++ b/templates/groupsystem/posts.html
@@ -11,7 +11,7 @@
             </h1>
             <ol class="breadcrumb">
                 <li><a href="#">{% trans "Group" %}</a></li>
-                <li class="active">{% trans "posts" %}</li>
+                <li class="active">{% trans "Posts" %}</li>
             </ol>
         </div>
         {% comment %}
