--- a/templates/hashtag/index.html
+++ b/templates/hashtag/index.html
@@ -38,7 +38,7 @@
                 {% trans "Hashtag" %}<br>
             </h1>
             <ol class="breadcrumb">
-                <li><a href="#">{% trans "hashtag" %}</a></li>
+                <li><a href="#">{% trans "Hashtag" %}</a></li>
             </ol>
         </div>
     </section>
