--- a/templates/information/contact.html
+++ b/templates/information/contact.html
@@ -10,7 +10,7 @@
                 {% trans "Contact" %}<br>
             </h1>
             <ol class="breadcrumb">
-                <li><a href="#">{% trans "contact" %}</a></li>
+                <li><a href="#">{% trans "Contact" %}</a></li>
             </ol>
         </div>
     </section>
