--- a/templates/messagingsystem/index.html
+++ b/templates/messagingsystem/index.html
@@ -58,7 +58,7 @@
                 {% trans "Messenger" %}<br>
             </h1>
             <ol class="breadcrumb">
-                <li><a href="#">{% trans "messenger" %}</a></li>
+                <li><a href="#">{% trans "Messenger" %}</a></li>
             </ol>
         </div>
         {% comment %}
