--- a/templates/profilesystem/index.html
+++ b/templates/profilesystem/index.html
@@ -42,7 +42,7 @@
                 {% trans "Profile" %}<br>
             </h1>
             <ol class="breadcrumb">
-                <li><a href="#">{% trans "profile" %}</a></li>
+                <li><a href="#">{% trans "Profile" %}</a></li>
             </ol>
         </div>
         {% comment %}
