--- a/templates/timelines/index.html
+++ b/templates/timelines/index.html
@@ -18,7 +18,7 @@
                 {% trans "Timeline" %}<br>
             </h1>
             <ol class="breadcrumb">
-                <li><a href="#">{% trans "timeline" %}</a></li>
+                <li><a href="#">{% trans "Timeline" %}</a></li>
             </ol>
         </div>
         {% comment %}
