--- a/templates/useraccount/index.html
+++ b/templates/useraccount/index.html
@@ -10,10 +10,10 @@
     <section class="content-header-new container-fluid">
         <div class="col-md-4">
             <h1>
-                {% trans "Account" %}<br>
+                {% trans "Accounts" %}<br>
             </h1>
             <ol class="breadcrumb">
-                <li><a href="#">{% trans "account" %}</a></li>
+                <li><a href="#">{% trans "Accounts" %}</a></li>
             </ol>
         </div>
         {% comment %}
