--- a/templates/groupsystem/defaultroles.html
+++ b/templates/groupsystem/defaultroles.html
@@ -10,15 +10,16 @@
         }
     </style>
 {% endblock extrastyle %}
-{{% block content_header_new %}
+{% block content_header_new %}
     <section class="content-header-new container-fluid">
         <div class="col-md-4">
             <h1>
-                {{ group.name }} - {% trans "admin" %} - {% trans "defaultroles" %}<br>
+                {% trans "Default Roles" %}<br>
             </h1>
             <ol class="breadcrumb">
                 <li><a href="#">{% trans "Group" %}</a></li>
-                <li class="active">{% trans "admin" %}</li>
+                <li>{% trans "Admin" %}</li>
+                <li class="active">{% trans "Default Roles" %}</li>
             </ol>
         </div>
         {% comment %}
