--- a/templates/groupsystem/eventsadmin.html
+++ b/templates/groupsystem/eventsadmin.html
@@ -7,11 +7,12 @@
     <section class="content-header-new container-fluid">
         <div class="col-md-4">
             <h1>
-                {{ group.name }}<br>
+                {% trans "Events" %}<br>
             </h1>
             <ol class="breadcrumb">
                 <li><a href="#">{% trans "Group" %}</a></li>
-                <li class="active">{% trans "admin" %}</li>
+                <li>{% trans "Admin" %}</li>
+                <li class="active">{% trans "Events" %}</li>
             </ol>
         </div>
         {% comment %}
