--- a/templates/base.html
+++ b/templates/base.html
@@ -34,10 +34,10 @@
     <link rel="manifest" href="/manifest.json">
     {% compress css %}
     <!-- Theme style -->
-    <link rel="stylesheet" href="{% static "dist/css/AdminLTE.css" %}?v=8.3.3">
+    <link rel="stylesheet" href="{% static "dist/css/AdminLTE.css" %}?v=8.3.4">
     <!-- AdminLTE Skins. Choose a skin from the css/skins
        folder instead of downloading all of them to reduce the load. -->
-    <link rel="stylesheet" href="{% static "dist/css/skins/skin-blue.css" %}?v=1.0.5">
+    <link rel="stylesheet" href="{% static "dist/css/skins/skin-blue.css" %}?v=1.0.6">
     <!-- iCheck -->
     <link rel="stylesheet" href="{% static "plugins/iCheck/flat/blue.css" %}">
     <!-- Morris chart -->
@@ -121,7 +121,7 @@
             <!-- Header Navbar: style can be found in header.less -->
             <nav class="navbar navbar-static-top">
                 <!-- Sidebar toggle button-->
-                <a href="#" class="sidebar-toggle visible-xs-block" data-toggle="offcanvas" role="button">
+                <a href="#" class="sidebar-toggle" data-toggle="offcanvas" role="button">
                     <span class="sr-only">{% trans "Toggle navigation" %}</span>
                 </a>
 
@@ -460,7 +460,7 @@
     <!-- PicEdit -->
     <script src="{% static "plugins/picedit/js/picedit.min.js" %}"></script>
     <!-- AdminLTE App -->
-    <script src="{% static "dist/js/app.js" %}?v=1.1.0"></script>
+    <script src="{% static "dist/js/app.js" %}?v=1.1.1"></script>
     <!-- AdminLTE for demo purposes -->
     <script src="{% static "dist/js/demo.js" %}"></script>
     <!--Sweet alert-->
