updated EP-347 and EP-350

--- a/templates/groupsystem/joinrequests.html
+++ b/templates/groupsystem/joinrequests.html
@@ -7,12 +7,12 @@
     <section class="content-header-new container-fluid">
         <div class="col-md-4">
             <h1>
-                {% trans "Joinrequests" %}<br>
+                {% trans "Join Requests" %}<br>
             </h1>
             <ol class="breadcrumb">
                 <li><a href="#">{% trans "Group" %}</a></li>
                 <li>{% trans "Admin" %}</li>
-                <li class="active">{% trans "Joinrequests" %}</li>
+                <li class="active">{% trans "Join Requests" %}</li>
             </ol>
         </div>
         {% comment %}
