--- a/templates/groupsystem/bannedmembers.html
+++ b/templates/groupsystem/bannedmembers.html
@@ -7,12 +7,12 @@
     <section class="content-header-new container-fluid">
         <div class="col-md-4">
             <h1>
-                {% trans "Banned members" %}<br>
+                {% trans "Banned Members" %}<br>
             </h1>
             <ol class="breadcrumb">
                 <li><a href="#">{% trans "Group" %}</a></li>
                 <li>{% trans "Admin" %}</li>
-                <li class="active">{% trans "Bannedmembers" %}</li>
+                <li class="active">{% trans "Banned Members" %}</li>
             </ol>
         </div>
         {% comment %}
