--- a/templates/messagingsystem/index.html
+++ b/templates/messagingsystem/index.html
@@ -52,7 +52,7 @@
     {% endcompress %}
 {% endblock extrastyle %}
 {% block content_header_new %}
-    <section class="content-header-new container-fluid">
+    <section class="content-header-new no-search-bar">
         <div class="col-md-4">
             <h1>
                 {% trans "Messenger" %}<br>
