--- a/templates/publicusers/userlist.html
+++ b/templates/publicusers/userlist.html
@@ -4,7 +4,7 @@
     {% trans "Members" %}
 {% endblock title %}
 {% block content_header_new %}
-    <section class="content-header-new container-fluid">
+    <section class="content-header-new">
         <div class="col-md-4">
             <h1>
                 {% trans "Members" %}<br>
