--- a/templates/dashboard/dashboard.html
+++ b/templates/dashboard/dashboard.html
@@ -14,7 +14,7 @@
     {% endcompress %}
 {% endblock %}
 {% block content_header_new %}
-    <section class="content-header-new container-fluid">
+    <section class="content-header-new no-search-bar">
         <div class="col-md-4">
             <h1>
                 {% trans "Dashboard" %}<br>
