--- a/templates/groupsystem/adminnews.html
+++ b/templates/groupsystem/adminnews.html
@@ -11,7 +11,7 @@
     </style>
 {% endblock extrastyle %}
 {% block content_header_new %}
-    <section class="content-header-new container-fluid">
+    <section class="content-header-new no-search-bar">
         <div class="col-md-4">
             <h1>
                 {% trans "News" %}<br>
