--- a/templates/groupsystem/adminsettings.html
+++ b/templates/groupsystem/adminsettings.html
@@ -4,7 +4,7 @@
     {{ group.name }} | {% trans "Admin" %} | {% trans "Settings" %}
 {% endblock title %}
 {% block content_header_new %}
-    <section class="content-header-new container-fluid">
+    <section class="content-header-new no-search-bar">
         <div class="col-md-4">
             <h1>
                 {% trans "Settings" %}<br>
