--- a/templates/groupsystem/joined_group.html
+++ b/templates/groupsystem/joined_group.html
@@ -6,7 +6,7 @@
 {% endblock title %}
 
 {% block content_header_new %}
-    <section class="content-header-new container-fluid">
+    <section class="content-header-new no-search-bar">
         <div class="col-md-4">
             <h1>
                 {% trans "Joined Groups" %}<br>
