--- a/templates/groupsystem/posts.html
+++ b/templates/groupsystem/posts.html
@@ -4,7 +4,7 @@
     {{ group.name }} | Posts
 {% endblock title %}
 {% block content_header_new %}
-    <section class="content-header-new container-fluid">
+    <section class="content-header-new no-search-bar">
         <div class="col-md-4">
             <h1>
                 {% trans "Posts" %}<br>
