--- a/templates/profilesystem/index.html
+++ b/templates/profilesystem/index.html
@@ -36,7 +36,7 @@
 {% endblock extrastyle %}
 
 {% block content_header_new %}
-    <section class="content-header-new container-fluid">
+    <section class="content-header-new no-search-bar">
         <div class="col-md-4">
             <h1>
                 {% trans "Profile" %}<br>
