--- a/templates/useraccount/transfer.html
+++ b/templates/useraccount/transfer.html
@@ -7,7 +7,7 @@
     {% trans "Transfer" %}
 {% endblock title %}
 {% block content_header_new %}
-    <section class="content-header-new container-fluid">
+    <section class="content-header-new no-search-bar">
         <div class="col-md-4">
             <h1>
                 {% trans "Transfer" %}<br>
