[EP-363] Dropdown menu for address selection

--- a/templates/profilesystem/address.html
+++ b/templates/profilesystem/address.html
@@ -34,7 +34,7 @@
     {% if useraddress.country %}
         <strong><i class="fa fa-globe margin-r-5"></i>{% trans "Country" %}</strong>
         <p class="text-muted">
-            {{ useraddress.country }}
+            {{ useraddress.country.name }}
         </p>
     {% endif %}
 {% endwith %}
